fix: contrast colors

--- a/less/slate-modified.less
+++ b/less/slate-modified.less
@@ -18,8 +18,8 @@
 @brand-primary:         @gray-light;
 @brand-success:         #62c462;
 @brand-info:            #5bc0de;
-@brand-warning:         #ffefbd;
-@brand-danger:          #f03f3a;
+@brand-warning:         #a36710;
+@brand-danger:          #d62b26;
 
 
 //== Scaffolding
